docs/refs/script-api/server/1.4.0/entityhitblockafterevent.md
# `EntityHitBlockAfterEvent`

> 文档版本：1.21.0.21

`EntityHitBlockAfterEvent`类。script_api.@minecraft/server.entityhitblockafterevent.description

## 属性

/// define
`blockFace`


///

```js
read-only blockFace: Direction;
```

/// html | div.result
//// define
`blockFace`：[`Direction`](./direction.md)

- script_api.@minecraft/server.entityhitblockafterevent.blockface.description


////

///


/// define
`damagingEntity`


///

```js
read-only damagingEntity: Entity;
```

/// html | div.result
//// define
`damagingEntity`：[`Entity`](./entity.md)

- script_api.@minecraft/server.entityhitblockafterevent.damagingentity.description


////

///


/// define
`hitBlock`


///

```js
read-only hitBlock: Block;
```

/// html | div.result
//// define
`hitBlock`：[`Block`](./block.md)

- script_api.@minecraft/server.entityhitblockafterevent.hitblock.description


////

///

